--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <div class="section-container">
         <div class="section__pic-container">
           <img
-            src="./assets/profile2.png"
+            src="./assets/Gif3.gif"
             alt="Profile picture"
             class="about-pic"
           />
@@ -343,7 +343,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-3.png"
+                src="./assets/port3.jpg"
                 alt="Project 3"
                 class="project-img"
               />
@@ -352,13 +352,13 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/saurabhpatel500/MyPortfolioWebsite'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://saurabh-patel-portfolio11.netlify.app'"
               >
                 Live Demo
               </button>
